--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -16,13 +16,15 @@
         border: 1px solid #ccc;
         border-radius: 3px;
         cursor: pointer;
+    }
 
-        .arrow-icon {
-            position: absolute;
-            top: 50%;
-            right: 5px;
-            transform: translateY(-50%);
-        }
+    &__arrow {
+        position: absolute;
+        right: 1em;
+        transform: translateY(-50%);
+        top: calc(50% + 2.5px);
+        border: 5px solid transparent;
+        border-top: 5px solid rgba(0, 0, 0, .5);
     }
 
     &__list {
